--- a/src/app/HizmetDetay/hizmet_detay.component.html
+++ b/src/app/HizmetDetay/hizmet_detay.component.html
@@ -45,7 +45,7 @@
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <span>Bebek Koltuğu</span>
+              <span>{{ hizmet_detay.hizmet_adi }}</span>
             </div>
           </div>
           <!-- Hizmet Adi -->
@@ -59,7 +59,7 @@
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <span>Günlük</span>
+              <span>{{ hizmet_detay.hizmet_turu.hizmet_turu_adi }}</span>
             </div>
           </div>
           <!-- Hizmet Adet Türü -->
@@ -73,7 +73,7 @@
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <span>Ekstralar (Opsiyonel)</span>
+              <span>{{ hizmet_detay.hizmet_kategori.kategori_adi }}</span>
             </div>
           </div>          
           <!-- Hizmet Kategorisi -->
@@ -87,7 +87,7 @@
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <span>12,00 <i class="fa fa-try"></i></span>
+              <span>{{ hizmet_detay.hizmet_fiyati }}<i class="fa fa-try"></i></span>
             </div>
           </div>          
           <!-- Hizmet Fiyatı -->
@@ -101,7 +101,7 @@
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <span>EVET</span>
+              <span>{{ hizmet_detay.adet_satisi_yapilsin_mi ? 'EVET' : 'HAYIR' }}</span>
             </div>
           </div>          
           <!-- Hizmet Adet Satışı -->
@@ -111,14 +111,14 @@
           <!-- Panel Footer Left Block -->
           <div class="panel-footer-left-block">
             <div class="panel-footer-ekleyen-kullanici-block">
-              <span>Ekleyen Kullanıcı : <a href="#" class="link-blue-hover">Ahmet Elçik</a></span>
+              <span>Ekleyen Kullanıcı : <a href="#" class="link-blue-hover">{{ hizmet_detay.ekleyen_kullanici.adi_soyadi }}</a></span>
             </div>
           </div>
           <!-- Panel Footer Left Block -->
           <!-- Panel Footer Right Block -->
           <div class="panel-footer-right-block">
             <div class="panel-footer-olusturulma-tarihi-block">
-              <span>Oluşturulma Tarihi : 12 Aralık 2016 11:30</span>
+              <span>Oluşturulma Tarihi : {{ hizmet_detay.olusturulma_tarihi }}</span>
             </div>
           </div>
           <!-- Panel Footer Right Block -->
